2003-05-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oleidl.h  (LPENUMOLEDOCUMENTVIEWS): Remove typedef.
	(IEnumOleDocumentViews): Remove commented out DECLARE_ENUMERATOR.
	* include/docobj.h  (LPENUMOLEDOCUMENTVIEWS): Add typedef (previously
	commented out).
	(IEnumOleDocumentViews): Add definition using DECLARE_ENUMERATOR.

2003-05-12  Earnie Boyd  <earnie@users.sf.net>

	* include/commctrl.h: (MCSC_BACKGROUND, MCSC_TEXT, MCSC_TITLEBK,
	MCSC_TITLETEXT, MCSC_MONTHBK, MCSCTRAILTEXT): Define.
	Thanks to: Robert Wishlaw  <rwishlaw @ shaw . ca>

2003-05-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/olectl.h (IOleControl,IOleControlSite,ISimpleFrameSite,
	IErrorLog,IPropertyBag,IPersistPropertyBag,IPersistStreamInit,
	IPersistMemory,IPropertyNotifySink,IProvideClassInfo,
	IProvideClassInfo2,IConnectionPointContainer,
	IEnumConnectionPoints,IConnectionPoint,IEnumConnections,
	IClassFactory2,ISpecifyPropertyPages,IPerPropertyBrowsing,
	IPropertyPageSite,IPropertyPage,IPropertyPage2,IFont,IFontDisp,
	IPicture,IPictureDisp): Move from here to...
	* include/ocidl.h (IOleControl,IOleControlSite,ISimpleFrameSite,
	IErrorLog,IPropertyBag,IPersistPropertyBag,IPersistStreamInit,
	IPersistMemory,IPropertyNotifySink,IProvideClassInfo,
	IProvideClassInfo2,IConnectionPointContainer,
	IEnumConnectionPoints,IConnectionPoint,IEnumConnections,
	IClassFactory2,ISpecifyPropertyPages,IPerPropertyBrowsing,
	IPropertyPageSite,IPropertyPage,IPropertyPage2,IFont,IFontDisp,
	IPicture,IPictureDisp): Here, as per documentation.

2003-05-12  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/oleauto.h (VarR8FromDec, VarDecFromR8): Add prototypes.
	* include/winbase.h (TerminateJobObject,
	AssignProcessToJobObject): Likewise.
	* include/servprov.h: New header.
	* lib/test.c: Include servprov.h.

2003-05-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlguid.h (CGID_ShellServiceObject): Declare.